Fix a few screen capture bugs for some multiconfig
Thanks to @lclc98 we worked around a bug in Qt<5.9 and made KShare work on weird multi monitor configurations where they for example overlap, also screens are now in proper positions despite what order they are in xrandr, for example.

Thanks again to @lclc98!

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -80,7 +80,7 @@
    </widget>
    <widget class="QMenu" name="menuRecording">
     <property name="title">
-     <string>Recording</string>
+     <string>&amp;Recording</string>
     </property>
     <addaction name="actionStart"/>
     <addaction name="actionStop"/>
