--- a/icon.qrc
+++ b/icon.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>icons/icon.png</file>
         <file>icons/icon.svg</file>
+        <file>icons/icon.ico</file>
     </qresource>
 </RCC>
