--- a/recording/encoders/encodersettingsdialog.ui
+++ b/recording/encoders/encodersettingsdialog.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
@@ -62,7 +62,7 @@
       <item row="4" column="0">
        <widget class="QTabWidget" name="videoTabs">
         <property name="currentIndex">
-         <number>0</number>
+         <number>2</number>
         </property>
         <widget class="QWidget" name="hTab">
          <property name="layoutDirection">
@@ -162,7 +162,7 @@
          <attribute name="title">
           <string>VP9</string>
          </attribute>
-         <layout class="QFormLayout" name="verticalLayout">
+         <layout class="QFormLayout" name="verticalLayout1">
           <item row="0" column="1">
            <widget class="QCheckBox" name="vp9Lossless">
             <property name="text">
@@ -176,7 +176,7 @@
          <attribute name="title">
           <string>GIF</string>
          </attribute>
-         <layout class="QFormLayout" name="verticalLayout">
+         <layout class="QFormLayout" name="verticalLayout2">
           <item row="0" column="0">
            <widget class="QLabel" name="label_3">
             <property name="text">
