Use a menu bar instead of a context menu

--- a/icon.qrc
+++ b/icon.qrc
@@ -3,5 +3,18 @@
         <file>icons/icon.png</file>
         <file>icons/icon.svg</file>
         <file>icons/icon.ico</file>
+        <file>icons/pencil.svg</file>
+        <file>icons/rectangle.svg</file>
+        <file>icons/line.svg</file>
+        <file>icons/text.svg</file>
+        <file>icons/delete.svg</file>
+        <file>icons/arrow.svg</file>
+        <file>icons/circle.svg</file>
+        <file>icons/settings.svg</file>
+        <file>icons/fontsettings.svg</file>
+        <file>icons/erase.svg</file>
+        <file>icons/blur.png</file>
+        <file>icons/accept.svg</file>
+        <file>icons/cancel.svg</file>
     </qresource>
 </RCC>
