--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -96,6 +96,9 @@
    <property name="text">
     <string>&amp;Quit</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
   </action>
   <action name="actionFullscreen">
    <property name="text">
